<resources>
    <string name="app_name">NFBoat</string>
    <string name="se_connecter">Se connecter</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="d_j_un_compte">Déjà un compte ?</string>
    <string name="address_email">Addresse email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="pas_encore_de_compte">Pas encore de compte ?</string>
    <string name="nous_rejoindre">Nous rejoindre</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="consultez_vos_mails">Consultez vos mails</string>
    <string name="nous_venons_de_vous_envoyer_les_consignes_de_r_initialisation_par_email">Nous venons de vous envoyer les consignes de réinitialisation par email</string>
    <string name="entrez_votre_code_pour_continuer">Entrez votre code pour continuer</string>
    <string name="v_rification_requise">Vérification requise</string>
    <string name="votre_nouveau_mot_de_passe_doit_tre_diff_rent_de_l_ancien">Votre nouveau mot de passe doit être différent de l’ancien</string>
    <string name="r_p_ter_le_mot_de_passe">Répéter le mot de passe</string>
    <string name="cr_ation_de_compte">Création de compte</string>
    <string name="prot_gez_l_acc_s_votre_coffre_fort_en_configurant_un_code_a_4_chiffres">Protégez l’accès à votre coffre fort en configurant un code a 4 chiffres</string>
    <string name="confirmez_le_code">Confirmez le code</string>
    <string name="r_p_tez_le_code_pour_continuer">Répétez le code pour continuer</string>
    <string name="ok">OK</string>
    <string name="r_initialiser">Réinitialiser</string>
    <string name="entrez_votre_addresse_email_pour_recevoir_un_lien_de_r_initialisation_de_mot_de_passe">Entrez votre addresse email pour recevoir un lien de réinitialisation de mot de passe</string>
    <string name="addresse_email">Addresse email</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe</string>
    <string name="confirmer">Confirmer</string>
    <string name="pr_nom">Prénom</string>
    <string name="mattie">Mattie</string>
    <string name="nom">Nom</string>
    <string name="hardwick">Hardwick</string>
    <string name="password">Password</string>
    <string name="cr_er_un_compt">Créer un compte</string>
    <string name="rechercher_un_bateau">Rechercher un bateau</string>
    <string name="poster_une_annonce">Poster une annonce</string>
    <string name="notre_s_l_ction">Notre séléction</string>
    <string name="marseille">Marseille</string>
    <string name="la_m_t_o_a_marseille">La météo a Marseille</string>
    <string name="lun">Lun</string>
    <string name="_15">15°</string>
    <string name="_25">25°</string>
    <string name="mer">Mer</string>
    <string name="_18">18°</string>
    <string name="ven">Ven</string>
    <string name="jeu">Jeu</string>
    <string name="vent_18km_h">Vent 18km/h</string>
    <string name="mar">Mar</string>
    <string name="_19">19°</string>
    <string name="_33">33°</string>
    <string name="c_est_ici_que_tous_les_documents_de_votre_bateau_seront_stock_s_acc_dez_y_en_un_clin_d_oeil_ou_envoyez_par_e_mail">C’est ici que tous les documents de votre bateau seront stockés. Accédez y en un clin d’oeil ou envoyez par e-mail</string>
    <string name="_0_00">0,00€</string>
    <string name="transf_rer_vers_un_compte_bancaire">Transférer vers un compte bancaire</string>
    <string name="historique">Historique</string>
    <string name="fonds_disponibles">Fonds disponibles</string>
    <string name="ajouter_un_bateau">Ajouter un bateau</string>
    <string name="contr_le_en_mer">Contrôle en mer</string>
    <string name="mes_bateaux">Mes bateaux</string>
    <string name="ajouter_un_document">Ajouter un document</string>
    <string name="rechercher_un_bateau_ou_un_document">Rechercher un bateau ou un document</string>
    <string name="assurance">Assurance</string>
    <string name="recherches_recentes">RECHERCHES RECENTES</string>
    <string name="zodiac_medline_ii">Zodiac medline II</string>
    <string name="nom_du_bateau">Nom du bateau</string>
    <string name="panga_a">Pangaïa</string>
    <string name="mma">MMA</string>
    <string name="type_de_s_rie">Type de série</string>
    <string name="num_ro_de_s_rie">Numéro de série</string>
    <string name="ajouter_un_bateau_etape_1_2">Ajouter un bateau - Etape 1/2</string>
    <string name="_2014">2014</string>
    <string name="longueur">Longueur</string>
    <string name="_14_5m">14.5m</string>
    <string name="_3_95m">3.95m</string>
    <string name="largeur">Largeur</string>
    <string name="yamaha">Yamaha</string>
    <string name="affaire_maritimes">Affaire maritimes</string>
    <string name="ann_e_de_construction">Année de construction</string>
    <string name="informations_sur_panga_a">Informations sur Pangaïa</string>
    <string name="type_de_bateau">Type de bateau</string>
    <string name="voilier">Voilier</string>
    <string name="ann_e">Année</string>
    <string name="n_de_s_rie">N° de série</string>
    <string name="_2018">2018</string>
    <string name="_15_2m">15,2m</string>
    <string name="_4_3m">4,3m</string>
    <string name="marque_du_moteur">Marque du moteur</string>
    <string name="puissance_du_moteur">Puissance du moteur</string>
    <string name="_450cv">450CV</string>
    <string name="affaires_maritimes">Affaires maritimes</string>
    <string name="n_d_affili">N° d’affilié</string>
    <string name="xtez345zxcfxcc">xtez345zxCFxcc</string>
    <string name="franchis_en_douanes">Franchisé en douanes</string>
    <string name="n_de_douanes">N° de douanes</string>
    <string name="xnaoijflzf45zz">XnaoijfLzf45zZ</string>
    <string name="veuillez_v_rifier_attentivement_chaque_information_une_fois_que_vous_cliquerez_sur_enregistrer_mon_bateau_il_sera_d_finitivement_inscrit_sur_la_blockchain_une_cl_priv_e_vous_sera_alors_transmise_vous_serez_le_seul_propri_taire_de_toutes_les_donn_es_figurant_dans_votre_wallet_rendez_vous_dans_la_rubrique_wallet_pour_ajouter_des_documents_votre_bateau">Veuillez vérifier attentivement chaque information. Une fois que vous cliquerez sur “enregistrer mon bateau”, il sera définitivement inscrit sur la blockchain. Une clé privée vous sera alors transmise, vous serez le seul propriétaire de toutes les données figurant dans votre wallet. Rendez-vous dans la rubrique wallet, pour ajouter des documents à votre bateau.</string>
    <string name="ajouter_un_bateau_etape_2_2">Ajouter un bateau - Etape 2/2</string>
    <string name="enregistrer_mon_bateau">Enregistrer mon bateau</string>
    <string name="passer_a_la_relecture">Passer a la relecture</string>
    <string name="votre_profil_bateau_est_d_sormais_inscrit_sur_la_blockchain_pour_ajouter_de_nouveaux_documents_rendez_vous_sur_la_page_wallet_puis_cliquez_sur_ajouter_un_document">Votre profil bateau est désormais inscrit sur la blockchain. Pour ajouter de nouveaux documents, rendez vous sur la page Wallet, puis cliquez sur “Ajouter un document”</string>
    <string name="retour_a_l_accueil">Retour a l’accueil</string>
    <string name="on_dirait_que_vos_informations_d_identit_ne_sont_pas_encore_configur_es_merci_de_t_l_charger_les_documents_suivants_pour_utiliser_la_fonction">On dirait que vos informations d’identité ne sont pas encore configurées, merci de télécharger les documents suivants pour utiliser la fonction</string>
    <string name="merci_de_t_l_charger_les_documents_suivants">Merci de télécharger les documents suivants</string>
    <string name="s_l_ctionner_les_documents_n_c_ssaires_l_acte_de_francisation_l_assurance_ainsi_que_le_permis_de_conduire_sont_disponibles">Séléctionner les documents nécéssaires. L’acte de francisation, l’assurance, ainsi que le permis de conduire sont disponibles</string>
    <string name="cliquez_sur_le_document_souhait">Cliquez sur le document souhaité</string>
    <string name="immatriculation_europ_enne">Immatriculation européenne</string>
    <string name="permis_de_conduire">Permis de conduire</string>
    <string name="acte_de_francisation">Acte de Francisation</string>
    <string name="retour">Retour</string>
    <string name="merci_de_remplir_les_informations_suivantes">Merci de remplir les informations suivantes</string>
    <string name="t_l_charger_le_document">Télécharger le document</string>
    <string name="entrez_vos_informations_bancaires">Entrez vos informations bancaires</string>
    <string name="transf_rer_mes_fonds">Transférer mes fonds</string>
    <string name="identifiant_iban">Identifiant IBAN</string>
    <string name="code_bic">Code BIC</string>
    <string name="banque">Banque</string>
    <string name="relecture">Relecture</string>
    <string name="confirmez_votre_transaction">Confirmez votre transaction</string>
    <string name="total_de_la_somme_transf_r_e">Total de la somme transférée</string>
    <string name="bic">BIC</string>
    <string name="frais_de_transfert">Frais de transfert</string>
    <string name="_16x41zz">16x41zz</string>
    <string name="confirm">Confirm</string>
    <string name="d_tails_du_transfert">Détails du transfert</string>
    <string name="transfert">Transfert</string>
    <string name="somme_transf_r_e">Somme transférée</string>
    <string name="_1450_0500_0064_1887_7477">1450 0500 0064 1887 7477</string>
    <string name="cr_dit_agricole">Crédit agricole</string>
    <string name="_3m8w2knjksr3jqmatyiyuraxvvza">3M8w2knJKsr3jqMatYiyuraxVvZA</string>
    <string name="historique_de_transferts">Historique de transferts</string>
    <string name="statut">Statut</string>
    <string name="montant">Montant</string>
    <string name="envoyer">Envoyer</string>
    <string name="envoyer_par_email">Envoyer par email</string>
    <string name="veuillez_renseigner_une_adresse_email">Veuillez renseigner une adresse email</string>
    <string name="vreynie_nfboat_com">vreynie@nfboat.com</string>
    <string name="veuillez_v_rifier_attentivement_chaque_information_une_fois_que_vous_cliquerez_sur_enregistrer_mon_bateau_il_sera_d_finitivement_inscrit_sur_la_blockchain">Veuillez vérifier attentivement chaque information. Une fois que vous cliquerez sur “enregistrer mon bateau”, il sera définitivement inscrit sur la blockchain.</string>
    <string name="une_cl_priv_e_vous_sera_alors_transmise_vous_serez_le_seul_propri_taire_de_toutes_les_donn_es_figurant_dans_votre_wallet">Une clé privée vous sera alors transmise, vous serez le seul propriétaire de toutes les données figurant dans votre wallet.</string>
    <string name="your_string_here">  <u>Ajouter un acheteur</u>.</string>
    <string name="your_string_here4">  <u>42 avis</u>.</string>
    <string name="your_string_here2">  <u>Tout effacer</u>.</string>
    <string name="your_string_here1">  <u>Passer</u>.</string>
    <string name="your_string_heree">  <u>Ajouter un vendeur</u>.</string>
    <string name="contrat_de_vente">Contrat de vente</string>
    <string name="information_de_l_acheteur_etape_1_4">Information de l’acheteur - Etape 1/4</string>
    <string name="rue_et_num_ro_de_rue">Rue et numéro de rue</string>
    <string name="_74_monroe_avenue">74 Monroe Avenue</string>
    <string name="fort_myers">Fort Myers</string>
    <string name="reyni">Reynié</string>
    <string name="_95000">95000</string>
    <string name="france">France</string>
    <string name="nationalit">Nationalité</string>
    <string name="valentin">Valentin</string>
    <string name="code_pays">Code pays</string>
    <string name="t_l_phone">Téléphone</string>
    <string name="code_postal">Code postal</string>
    <string name="ville">Ville</string>
    <string name="_06_61_55_97_80">06 61 55 97 80</string>
    <string name="suivant">Suivant</string>
    <string name="information_du_bateau_etape_3_4">Information du bateau - Etape 3/4</string>
    <string name="valentin_reyni">Valentin Reynié</string>
</resources>