<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/pin_background"
    android:layout_height="match_parent"
    tools:context=".activity.EnvoyEmailActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backgroundImage"
        android:layout_width="411dp"
        android:layout_height="@dimen/_110sdp"
        android:background="@color/pin_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_semibold"
            android:gravity="center"
            android:text="@string/envoyer_par_email"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginTop="26dp"
            android:contentDescription="@string/ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/backicon_black" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/font_regular"
            android:gravity="center"
            android:lineSpacingMultiplier="1.0"
            android:text="@string/veuillez_renseigner_une_adresse_email"
            android:textColor="@color/black"
            android:textSize="@dimen/small_textsize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/simple_white_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundImage"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--Name-->
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/font_regular"
                android:text="@string/address_email"
                android:textColor="@color/hint_colour"
                android:textSize="@dimen/small_textsize"
                app:layout_constraintBottom_toTopOf="@+id/userName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText

                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/font_semibold"
                android:hint="@string/vreynie_nfboat_com"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/medium_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />



            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/app_colour"
                android:fontFamily="@font/font_semibold"
                android:text="@string/envoyer"
                android:textColor="@color/white"
                android:textSize="@dimen/small_textsize"
                app:cornerRadius="26dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/userName"
                app:layout_constraintStart_toStartOf="@+id/userName"
                app:layout_constraintTop_toBottomOf="@+id/userName"
                app:layout_constraintVertical_bias="0.0" />




        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>