<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_colour"
    tools:context=".activity.SplashActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_130sdp"
        android:src="@drawable/splash_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22000003" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_45sdp"
        android:backgroundTint="@color/white"
        android:text="@string/cr_er_un_compte"
        android:textColor="@color/app_colour"
        android:fontFamily="@font/font_regular"
        android:textSize="@dimen/small_textsize"
        app:cornerRadius="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/d_j_un_compte"
        android:textColor="@color/white"
        android:textSize="@dimen/small_textsize"
        android:fontFamily="@font/font_regular"
        app:layout_constraintEnd_toEndOf="@+id/materialButton"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/materialButton"
        app:layout_constraintTop_toBottomOf="@+id/materialButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6sdp"
        android:text="@string/se_connecter"
        android:textColor="@color/white"
        android:fontFamily="@font/font_regular"
        android:textSize="@dimen/small_textsize"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>